// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ControllerGenerator - Comprehensive Tests > Snapshot Testing > should match Express controller snapshot 1`] = `
"// @generated
// This file is automatically generated. Do not edit manually.

import type { Request, Response } from 'express'
import { todoService } from '@/services/todo'
import { TodoCreateSchema, TodoUpdateSchema, TodoQuerySchema } from '@/validators/todo'
import { ZodError } from 'zod'


/**
 * List all Todo records
 */
export const listTodos = async (req: Request, res: Response) {
  try {
    const query = TodoQuerySchema.parse(req.query)
    const result = await todoService.list(query)
    return res.json(result)
  } catch (error) {
    if (error instanceof ZodError) {
      return res.status(400).json({ error: 'Validation Error', details: error.errors })
    }
    console.error(error)
    return res.status(500).json({ error: 'Internal Server Error' })
  }
}

/**
 * Get Todo by ID
 */
export const getTodo = async (req: Request<{ Params: { id: string } }>, res: Response) {
  try {
    const id = parseInt(req.params.id, 10)
    if (isNaN(id)) {
      return res.status(400).json({ error: 'Invalid ID format' })
    }

    const item = await todoService.findById(id)

    if (!item) {
      return res.status(404).json({ error: 'Todo not found' })
    }

    return res.json(item)
  } catch (error) {
    console.error(error)
    return res.status(500).json({ error: 'Internal Server Error' })
  }
}

/**
 * Create Todo
 */
export const createTodo = async (req: Request, res: Response) {
  try {
    const data = TodoCreateSchema.parse(req.body)
    const item = await todoService.create(data)
    return res.status(201).json(item)
  } catch (error) {
    if (error instanceof ZodError) {
      return res.status(400).json({ error: 'Validation Error', details: error.errors })
    }
    console.error(error)
    return res.status(500).json({ error: 'Internal Server Error' })
  }
}

/**
 * Update Todo
 */
export const updateTodo = async (req: Request<{ Params: { id: string } }>, res: Response) {
  try {
    const id = parseInt(req.params.id, 10)
    if (isNaN(id)) {
      return res.status(400).json({ error: 'Invalid ID format' })
    }

    const data = TodoUpdateSchema.parse(req.body)
    const item = await todoService.update(id, data)

    if (!item) {
      return res.status(404).json({ error: 'Todo not found' })
    }

    return res.json(item)
  } catch (error) {
    if (error instanceof ZodError) {
      return res.status(400).json({ error: 'Validation Error', details: error.errors })
    }
    console.error(error)
    return res.status(500).json({ error: 'Internal Server Error' })
  }
}

/**
 * Delete Todo
 */
export const deleteTodo = async (req: Request<{ Params: { id: string } }>, res: Response) {
  try {
    const id = parseInt(req.params.id, 10)
    if (isNaN(id)) {
      return res.status(400).json({ error: 'Invalid ID format' })
    }

    const deleted = await todoService.delete(id)

    if (!deleted) {
      return res.status(404).json({ error: 'Todo not found' })
    }

    return res.status(204).send()
  } catch (error) {
    console.error(error)
    return res.status(500).json({ error: 'Internal Server Error' })
  }
}

/**
 * Count Todo records
 */
export const countTodos = async (_req: Request, res: Response) => {
  try {
    const total = await todoService.count()
    return res.json({ total })
  } catch (error) {
    console.error(error)
    return res.status(500).json({ error: 'Internal Server Error' })
  }
}"
`;

exports[`ControllerGenerator - Comprehensive Tests > Snapshot Testing > should match Fastify controller snapshot 1`] = `
"// @generated
// This file is automatically generated. Do not edit manually.

import type { FastifyRequest, FastifyReply } from 'fastify'
import { todoService } from '@/services/todo'
import { TodoCreateSchema, TodoUpdateSchema, TodoQuerySchema } from '@/validators/todo'
import { ZodError } from 'zod'


/**
 * List all Todo records
 */
export const listTodos = async (request: FastifyRequest, reply: FastifyReply) {
  try {
    const query = TodoQuerySchema.parse(request.query)
    const result = await todoService.list(query)
    return result
  } catch (error) {
    if (error instanceof ZodError) {
      return reply.code(400).send({ error: 'Validation Error', details: error.errors })
    }
    console.error(error)
    return reply.code(500).send({ error: 'Internal Server Error' })
  }
}

/**
 * Get Todo by ID
 */
export const getTodo = async (request: FastifyRequest<{ Params: { id: string } }>, reply: FastifyReply) {
  try {
    const id = parseInt(request.params.id, 10)
    if (isNaN(id)) {
      return reply.code(400).send({ error: 'Invalid ID format' })
    }

    const item = await todoService.findById(id)

    if (!item) {
      return reply.code(404).send({ error: 'Todo not found' })
    }

    return item
  } catch (error) {
    console.error(error)
    return reply.code(500).send({ error: 'Internal Server Error' })
  }
}

/**
 * Create Todo
 */
export const createTodo = async (request: FastifyRequest, reply: FastifyReply) {
  try {
    const data = TodoCreateSchema.parse(request.body)
    const item = await todoService.create(data)
    return reply.code(201).send(item)
  } catch (error) {
    if (error instanceof ZodError) {
      return reply.code(400).send({ error: 'Validation Error', details: error.errors })
    }
    console.error(error)
    return reply.code(500).send({ error: 'Internal Server Error' })
  }
}

/**
 * Update Todo
 */
export const updateTodo = async (request: FastifyRequest<{ Params: { id: string } }>, reply: FastifyReply) {
  try {
    const id = parseInt(request.params.id, 10)
    if (isNaN(id)) {
      return reply.code(400).send({ error: 'Invalid ID format' })
    }

    const data = TodoUpdateSchema.parse(request.body)
    const item = await todoService.update(id, data)

    if (!item) {
      return reply.code(404).send({ error: 'Todo not found' })
    }

    return item
  } catch (error) {
    if (error instanceof ZodError) {
      return reply.code(400).send({ error: 'Validation Error', details: error.errors })
    }
    console.error(error)
    return reply.code(500).send({ error: 'Internal Server Error' })
  }
}

/**
 * Delete Todo
 */
export const deleteTodo = async (request: FastifyRequest<{ Params: { id: string } }>, reply: FastifyReply) {
  try {
    const id = parseInt(request.params.id, 10)
    if (isNaN(id)) {
      return reply.code(400).send({ error: 'Invalid ID format' })
    }

    const deleted = await todoService.delete(id)

    if (!deleted) {
      return reply.code(404).send({ error: 'Todo not found' })
    }

    return reply.code(204).send()
  } catch (error) {
    console.error(error)
    return reply.code(500).send({ error: 'Internal Server Error' })
  }
}

/**
 * Count Todo records
 */
export const countTodos = async (_request: FastifyRequest, reply: FastifyReply) => {
  try {
    const total = await todoService.count()
    return { total }
  } catch (error) {
    console.error(error)
    return reply.code(500).send({ error: 'Internal Server Error' })
  }
}"
`;

exports[`ControllerGenerator - Comprehensive Tests > Snapshot Testing > should match minimal snapshot structure 1`] = `
[
  {
    "filename": "post.controller.ts",
    "snapshot": {
      "exports": [
        "countPosts",
        "createPost",
        "deletePost",
        "getPost",
        "listPosts",
        "updatePost",
      ],
      "functions": [
        "countPosts",
        "createPost",
        "data",
        "data",
        "deletePost",
        "deleted",
        "getPost",
        "id",
        "id",
        "id",
        "item",
        "item",
        "item",
        "listPosts",
        "query",
        "result",
        "total",
        "updatePost",
      ],
      "imports": [
        "@/services/post",
        "@/validators/post",
        "express",
        "zod",
      ],
      "types": [],
    },
  },
]
`;
